build/k8s-ntenant-sync/kubernetes/k8s-ntenant-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ntenant-sync
  labels:
    app: k8s-ntenant-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-ntenant-sync
  template:
    metadata:
      labels:
        app: k8s-ntenant-sync
    spec:
      serviceAccountName: k8s-ntenant-sa
      containers:
      - name: k8s-ntenant-sync
        image: bartvanbenthem/k8s-ntenant-sync:v3 #v3
        ports:
        - containerPort: 3111
        livenessProbe:
          httpGet:
            path: /
            port: 3111
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-ntenant-svc
spec:
  type: ClusterIP
  selector:
    app: k8s-ntenant-sync
  ports:
    - port: 3111
      targetPort: 3111
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ntenant-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ntenant
    http:
      paths:
        - path: /
          backend:
            serviceName: k8s-ntenant-svc
            servicePort: 3111
